# alphagenome

./: .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  conftest.py  hatch_build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: presubmit_checks.yml  release.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml
colabs/: batch_variant_scoring.ipynb  essential_commands.ipynb  example_analysis_workflow.ipynb  quick_start.ipynb  tissue_ontology_mapping.ipynb  visualization_modality_tour.ipynb
docs/: README.md  make.bat
docs/source/: conf.py  exploring_model_metadata.md  faqs.md  index.md  installation.md  references.md  refs.bib  variant_scoring.md  visualization_library_basics.md
docs/source/_templates/autosummary/: class.rst
docs/source/api/: data.md  index.md  interpretation.md  models.md  visualization.md
docs/source/tutorials/: index.md
docs/source/user_guides/: index.md
scripts/: process_gtf.py
src/alphagenome/: __init__.py  colab_utils.py  colab_utils_test.py  tensor_utils.py  tensor_utils_benchmark_test.py  tensor_utils_test.py  typing.py  typing_test.py
src/alphagenome/data/: __init__.py  fold_intervals.py  fold_intervals_test.py  gene_annotation.py  gene_annotation_test.py  genome.py  genome_test.py  junction_data.py  junction_data_test.py  ontology.py  ontology_test.py  track_data.py  track_data_test.py  transcript.py
src/alphagenome/interpretation/: __init__.py  ism.py  ism_test.py
src/alphagenome/models/: __init__.py  dna_client.py  dna_client_test.py  dna_model.py  dna_model_test.py  dna_output.py  dna_output_test.py  interval_scorers.py  interval_scorers_test.py  junction_data_utils.py  junction_data_utils_test.py  track_data_utils.py  track_data_utils_test.py  variant_scorers.py  variant_scorers_test.py
src/alphagenome/protos/: __init__.py  dna_model.proto  dna_model_service.proto  tensor.proto
src/alphagenome/visualization/: __init__.py  plot.py  plot_components.py  plot_components_test.py  plot_transcripts.py
